--- a/SpaceOut 4/SpaceOut.rc
+++ b/SpaceOut 4/SpaceOut.rc
@@ -23,8 +23,10 @@ IDB_CAR               BITMAP       "Car.bmp"
 IDB_SMCAR             BITMAP       "SmCar.bmp"
 IDB_MISSILE           BITMAP       "Missile.bmp"
 IDB_BLOBBO            BITMAP       "Blobbo.bmp"
+IDB_BLOBBOF           BITMAP       "Blobbof.bmp"
 IDB_BMISSILE          BITMAP       "BMissile.bmp"
 IDB_JELLY             BITMAP       "Jelly.bmp"
+IDB_JELLYF            BITMAP       "Jellyf.bmp"
 IDB_JMISSILE          BITMAP       "JMissile.bmp"
 IDB_TIMMY             BITMAP       "Timmy.bmp"
 IDB_TMISSILE          BITMAP       "TMissile.bmp"
