--- a/Face Invaders/AndroidManifest.xml
+++ b/Face Invaders/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="15" />
 
     <application
-        android:icon="@drawable/ic_hamm"
+        android:icon="@drawable/car"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
